[gd_scene load_steps=5 format=3 uid="uid://jdjmkff1qfcb"]

[ext_resource type="Script" path="res://hud.gd" id="1_leewi"]
[ext_resource type="FontFile" uid="uid://b3petxko57uvp" path="res://fonts/Xolonium-Regular.ttf" id="2_05127"]

[sub_resource type="InputEventAction" id="InputEventAction_0ori5"]
action = &"commencer_le_jeu"

[sub_resource type="Shortcut" id="Shortcut_p0m3y"]
events = [SubResource("InputEventAction_0ori5")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_leewi")

[node name="ScoreEtiquette" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_05127")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -33.0
offset_right = 240.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_05127")
theme_override_font_sizes/font_size = 64
text = "Dogde the Creeps !"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BoutonDebut" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_05127")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_p0m3y")
text = "Commencer"

[node name="TempsMessage" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="BoutonDebut" to="." method="_on_bouton_debut_pressed"]
[connection signal="timeout" from="TempsMessage" to="." method="_on_temps_message_timeout"]
